# django-tables2-tutorial

./: LICENSE  environment.yml  manage.py  pyproject.toml
django_tables2_tutorial/: asgi.py  settings.py  urls.py  wsgi.py
tutorial/: admin.py  filters.py  models.py  tables.py  views.py
tutorial/migrations/: 0001_initial.py
tutorial/templates/: people.html  template.html
