[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["Rowan Molony <rowan.molony@mainstreamrp.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django-tables2 = "^2.4.1"
django-filter = "^22.1"
django-bootstrap3 = "^21.2"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
